syntax = "proto3";

package pb;

import "errcode.proto";
import "msgid.proto";

service Router {
  rpc ReqCall (ReqArg) returns (RespMsg) {}
}

message ReqArg {
  string Uid = 1;
  string SessionId = 2;
  MsgID MsgID = 3;
  bytes Payload = 4;
}

message RespMsg {
  MsgID MsgID = 1;
  ErrCode Code = 2;
  bytes Payload = 3;
}
